--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,12 +12,18 @@
     state: absent
   when: apt_remove_sources
 
-- name: Remove every file under /etc/apt/sources.list.d
-  file:
-    path: "{{ item }}"
-    state: absent
-  with_fileglob:
-    - "/etc/apt/sources.list.d/*"
+- block:
+
+    - name: Get files in /etc/apt/sources.list.d
+      shell: ls /etc/apt/sources.list.d/*
+      register: apt_sources_list_d_files
+
+    - name: Remove every file under /etc/apt/sources.list.d
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_items: "{{ apt_sources_list_d_files.stdout_lines }}"
+
   when: apt_remove_sources_d
 
 - name: Remove /etc/apt/apt.conf
@@ -26,12 +32,18 @@
     state: absent
   when: apt_remove_conf
 
-- name: Remove every file under /etc/apt/apt.conf.d
-  file:
-    path: "{{ item }}"
-    state: absent
-  with_fileglob:
-    - "/etc/apt/apt.conf.d/*"
+- block:
+
+    - name: Get files in /etc/apt/apt.conf.d
+      shell: ls /etc/apt/apt.conf.d/*
+      register: apt_conf_d_files
+
+    - name: Remove every file under /etc/apt/apt.conf.d
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_items: "{{ apt_conf_d_files.stdout_lines }}"
+
   when: apt_remove_conf_d
 
 - name: Remove /etc/apt/preferences
@@ -40,12 +52,18 @@
     state: absent
   when: apt_remove_preferences
 
-- name: Remove every file under /etc/apt/preferences.d
-  file:
-    path: "{{ item }}"
-    state: absent
-  with_fileglob:
-    - "/etc/apt/preferences.d/*"
+- block:
+
+    - name: Get files in /etc/apt/preferences.d
+      shell: ls /etc/apt/preferences.d/*
+      register: apt_preferences_d_files
+
+    - name: Remove every file under /etc/apt/preferences.d
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_items: "{{ apt_preferences_d_files.stdout_lines }}"
+
   when: apt_remove_preferences_d
 
 - name: Merge default and custom APT sources
