--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -9,6 +9,9 @@ lint:
   name: yamllint
 
 platforms:
+  - name: debian-jessie
+    image: debian:jessie
+
   - name: debian-stretch
     image: debian:stretch
 
