--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,30 @@
 ---
 
 language: python
-python: "2.7"
+python:
+  - 2.7
+  - 3.6
 
 sudo: required
 
 services:
   - docker
 
+matrix:
+  fast_finish: true
+
+env:
+  matrix:
+    - ANSIBLE=2.2
+    - ANSIBLE=2.3
+    - ANSIBLE=2.4
+    - ANSIBLE=2.5
+
 install:
-  - pip install -r test-requirements.txt
+  - pip install tox-travis
 
 script:
-  - molecule test --all
+  - tox
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
