--- a/molecule/default/playbook-vars.yml
+++ b/molecule/default/playbook-vars.yml
@@ -62,14 +62,14 @@ apt_sources_custom:
       Arch: amd64
     gpg_fingerprint: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
     gpg_url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
-  - name: virtualbox
-    uri: http://download.virtualbox.org/virtualbox/debian
-    suites:
-      - "{{ ansible_distribution_release | lower }}"
-    components:
-      - contrib
-    gpg_fingerprint: B9F8D658297AF3EFC18D5CDFA2F683C52980AECF
-    gpg_url: https://www.virtualbox.org/download/oracle_vbox_2016.asc
+  # - name: virtualbox
+  #   uri: http://download.virtualbox.org/virtualbox/debian
+  #   suites:
+  #     - "{{ ansible_distribution_release | lower }}"
+  #   components:
+  #     - contrib
+  #   gpg_fingerprint: B9F8D658297AF3EFC18D5CDFA2F683C52980AECF
+  #   gpg_url: https://www.virtualbox.org/download/oracle_vbox_2016.asc
   - name: vagrant
     uri: https://vagrant-deb.linestarve.com
     suites:
